--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
 </head>
 <body>
 <div class="test"></div>
-<textarea name="" id="Editor" class="full"></textarea>
+<textarea name="" id="Editor" class="full">sdfasdfdsfasSed magna purus, fermentum eu, tincidunt eu, varius u~~hello~~t, felis. Curabi~~box~~tur ullamcorper ultricies nisi.
+
+Nulla consequat massa quis enim. Suspendisse non nisl sit am~~hello~~et velit hendr~~box 20 5~~erit rutrum.
+
+~~box~~
+This should be inside a box
+~~box~~  ~~/box~~
+and i can has many lines
+nice !
+~~/box~~
+</textarea>
 
 
 </body>
