--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ and i can has many lines
 nice ! ~~close~~
 ~~/box~~
 
-~~testparam test:test 1 2~~
+~~testparam test:test 1 2 test2:"with spaces\"and stuff"~~
 
 ~~edit hello~~
 </textarea>
