--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="js/codewave.js"></script>
   <script type="text/javascript" src="js/cmd_instance.js"></script>
   <script type="text/javascript" src="js/cmds.js"></script>
+  <script type="text/javascript" src="js/core_cmds.js"></script>
   <script type="text/javascript" src="js/text_parser.js"></script>
   <script type="text/javascript" src="js/text_area_editor.js"></script>
   
