--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <script type="text/javascript" src="js/core_cmds.js"></script>
   <script type="text/javascript" src="js/text_parser.js"></script>
   <script type="text/javascript" src="js/text_area_editor.js"></script>
+  <script type="text/javascript" src="js/storage.js"></script>
+  <script type="text/javascript" src="js/init.js"></script>
   
   <script type="text/javascript">
     (function( $ ) {
@@ -33,6 +35,10 @@ This should be inside a box
 and i can has many lines
 nice ! ~~close~~
 ~~/box~~
+
+~~testlong~~~~~
+<!-- ~~testlong~~~~~ -->
+<!-- ~~/testlong~~~~ -->
 
 ~~testparam test:test 1 2 test2:"with spaces\"and stuff"~~
 
