--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   
   <script type="text/javascript" src="js/codewave.js"></script>
+  <script type="text/javascript" src="js/closing_promp.js"></script>
   <script type="text/javascript" src="js/cmd_instance.js"></script>
   <script type="text/javascript" src="js/cmds.js"></script>
   <script type="text/javascript" src="js/core_cmds.js"></script>
