php tags detection

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@ nice ! ~~close~~
 ~~testparam test:test 1 2 test2:"with spaces\"and stuff"~~
 
 ~~edit hello~~
-
 ~~namespace~~
+<?php
+~~namespace~~
+?>
 ~~namespace html~~
 ~~ul>li~~
 </textarea>
