php:outer fallback + beforeExecute and alterResult options

--- a/index.html
+++ b/index.html
@@ -49,9 +49,19 @@ nice ! ~~close~~
 ~~testparam test:test 1 2 test2:"with spaces\"and stuff"~~
 
 ~~edit hello~~
+
+~~if~~
+<span></span>
+~~/if~~
+
 ~~namespace~~
 <?php
 ~~namespace~~
+
+~~if~~
+$lorem = 'ipsum';
+~~/if~~
+
 ?>
 ~~namespace html~~
 ~~ul>li~~
