help and help:demo commands

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 </head>
 <body>
 <div class="test"></div>
-<textarea name="" id="Editor" class="full" data-lang="php">sdfasdfdsfasSed magna purus, fermentum eu, tincidunt eu, varius ~~hello~~, felis. Curabi~~box~~tur ullamcorper ultricies nisi.
+<textarea name="" id="Editor" class="full" data-lang="php">
+~~help~~
+~~help:demo~~
+
+sdfasdfdsfasSed magna purus, fermentum eu, tincidunt eu, varius ~~hello~~, felis. Curabi~~box~~tur ullamcorper ultricies nisi.
 ~~box 20 5~~
 
 ~~box~~
