fix bug with small box with big command and more help

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ nice ! ~~close~~
 ~~testparam test:test 1 2 test2:"with spaces\"and stuff"~~
 
 ~~edit hello~~
+~~edit test~~
 
 ~~if~~
 <span></span>
