--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <textarea name="" id="Editor" class="full" data-lang="php">
 ~~help~~
 ~~help:demo~~
+~~help:editing~~
 
 sdfasdfdsfasSed magna purus, fermentum eu, tincidunt eu, varius ~~hello~~, felis. Curabi~~box~~tur ullamcorper ultricies nisi.
 ~~box 20 5~~
