--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 <div class="test"></div>
-<textarea name="" id="Editor" class="full" data-lang="php">
+<textarea name="" id="Editor" class="full" data-lang="js">
 ~~help~~
 ~~help:demo~~
 ~~help:editing~~
