--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="js/storage.js"></script>
   <script type="text/javascript" src="js/util.js"></script>
   <script type="text/javascript" src="js/text_parser.js"></script>
+  <script type="text/javascript" src="js/box_helper.js"></script>
   <script type="text/javascript" src="js/text_area_editor.js"></script>
   <script type="text/javascript" src="js/init.js"></script>
   <script type="text/javascript" src="js/vendors/emmet-min.js"></script>
@@ -56,10 +57,14 @@ nice ! ~~close~~
 ~~edit hello~~
 ~~edit test~~
 
-~~if~~
-<span></span>
-~~/if~~
-
+  ~~box~~  
+      ~~f~~
+      ~~if~~ 
+      ~~log~~"~~hello~~"~~/log~~
+      ~~/if~~
+      ~~/f~~   
+  ~~/box~~
+  
 ~~namespace~~
 <?php
 ~~namespace~~
