[wip] comment styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script type="text/javascript" src="js/closing_promp.js"></script>
   <script type="text/javascript" src="js/cmd_instance.js"></script>
   <script type="text/javascript" src="js/cmd_finder.js"></script>
+  <script type="text/javascript" src="js/process.js"></script>
   <script type="text/javascript" src="js/command.js"></script>
   <script type="text/javascript" src="js/core_cmds.js"></script>
   <script type="text/javascript" src="js/detector.js"></script>
@@ -34,7 +35,7 @@
 </head>
 <body>
 <div class="test"></div>
-<textarea name="" id="Editor" class="full" data-lang="js">
+<textarea name="" id="Editor" class="full" data-lang="php">
 ~~help~~
 ~~help:demo~~
 ~~help:editing~~
