--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   
   <script type="text/javascript" src="js/codewave.js"></script>
+  <script type="text/javascript" src="js/context.js"></script>
   <script type="text/javascript" src="js/closing_promp.js"></script>
   <script type="text/javascript" src="js/cmd_instance.js"></script>
   <script type="text/javascript" src="js/cmd_finder.js"></script>
@@ -35,7 +36,7 @@
 </head>
 <body>
 <div class="test"></div>
-<textarea name="" id="Editor" class="full" data-lang="php">
+<textarea name="" id="Editor" class="full" data-lang="js">
 ~~help~~
 ~~help:demo~~
 ~~help:editing~~
