multiple selection expanding support

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/app.css" media="all" />
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   
+  <script src="//localhost:35729/livereload.js"></script>
   <script type="text/javascript" src="js/codewave.js"></script>
   <script type="text/javascript" src="js/vendors/emmet-min.js"></script>
   
@@ -13,7 +14,8 @@
   <script type="text/javascript">
     (function( $ ) {
       $(function(){
-        window.cw = Codewave.detect('Editor');
+        //window.cw = Codewave.detect('Editor');
+        window.cw = new Codewave(new Codewave.TestEditor('Editor'));
       })
     })( jQuery );
   </script>
@@ -34,6 +36,11 @@ This should be inside a box
 and i can has many lines
 nice ! ~~close~~
 ~~/box~~
+
+--hello~~ 1
+--hello~~ 2
+--namespace~~
+--hello~~ 3
 
 ~~testlong~~~~~
 <!-- ~~testlong~~~~~ -->
