[wip] multi lines support for ClosingPromp

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <script type="text/javascript">
     (function( $ ) {
       $(function(){
-        //window.cw = Codewave.detect('Editor');
-        window.cw = new Codewave(new Codewave.TestEditor('Editor'));
+        window.cw = Codewave.detect('Editor');
+        //window.cw = new Codewave(new Codewave.TestEditor('Editor'));
       })
     })( jQuery );
   </script>
