param command : allow to add param to string commands

--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@ and i can has many lines
 nice ! ~~close~~
 ~~/box~~
 
---hello~~ 1
---hello~~ 2
---namespace~~
---hello~~ 3
+~~php:outer:c foo~~
 
 ~~testlong~~~~~
 <!-- ~~testlong~~~~~ -->
