[wip] better php tag handling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <div class="test"></div>
-<textarea name="" id="Editor" class="full" data-lang="js">
+<textarea name="" id="Editor" class="full" data-lang="php">
 ~~help~~
 ~~help:demo~~
 ~~help:editing~~
@@ -36,7 +36,7 @@ This should be inside a box
 and i can has many lines
 nice ! ~~close~~
 ~~/box~~
-
+~~wrapper_test~~
 ~~php:outer:c foo~~
 
 ~~testlong~~~~~
