--- a/test/test.html
+++ b/test/test.html
@@ -40,6 +40,8 @@
     <script type="text/javascript" src="../js/vendors/emmet-min.js"></script>
 
     <!-- Spec files -->
+    <script type="text/javascript" src="spec/util.js"></script>
+    <script type="text/javascript" src="spec/pair.js"></script>
     <script type="text/javascript" src="spec/editor.js"></script>
     <script type="text/javascript" src="spec/codewave.js"></script>
     <script type="text/javascript" src="spec/cmd_authoring.js"></script>
