fix closed nested box should be aligned and tests for closing prompt

--- a/test/test.html
+++ b/test/test.html
@@ -24,19 +24,22 @@
         // Setup chai
         var expect = chai.expect;
     </script>
-    <script src="js/test_utils.js"></script>
 
     <!-- Include anything you want to test -->
     <script type="text/javascript" src="../js/codewave.js"></script>
+    <script src="js/test_utils.js"></script>
     <script type="text/javascript" src="../js/vendors/emmet-min.js"></script>
 
     <!-- Spec files -->
     <script type="text/javascript" src="spec/util.js"></script>
+    <script type="text/javascript" src="spec/replacement.js"></script>
     <script type="text/javascript" src="spec/pair.js"></script>
     <script type="text/javascript" src="spec/editor.js"></script>
+    <script type="text/javascript" src="spec/box_helper.js"></script>
     <script type="text/javascript" src="spec/codewave.js"></script>
     <script type="text/javascript" src="spec/cmd_authoring.js"></script>
     <script type="text/javascript" src="spec/php.js"></script>
+    <script type="text/javascript" src="spec/closing_promp.js"></script>
 
     <!-- run mocha -->
     <script type="text/javascript" charset="utf-8">
